# muttest-rs

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: examples.yml  main.yml  rust.yml  security_audit.yml  selftest.yml
api/: Cargo.toml  lib.rs
app/: Cargo.toml  main.rs
app/src/: main.rs
cargo-muttest/: Cargo.toml
cargo-muttest/src/: main.rs
codegen/: Cargo.toml  lib.rs
codegen/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: architecture.md  mutations.md
examples/: Cargo.toml  find.rs  lib.rs  sort.rs  triangle.rs  triangle_v2.rs
muttest-codegen/: Cargo.toml
muttest-codegen/src/: lib.rs
selftest/: Cargo.toml
src/: collector.rs  context.rs  lib.rs  mock.rs  mutable.rs  mutable_id.rs  mutables.rs  mutator.rs  report.rs  tests.rs  transformer.rs
src/mutable/: assign_op.rs  binop_bool.rs  binop_calc.rs  binop_cmp.rs  binop_eq.rs  extreme.rs  lit_char.rs  lit_int.rs  lit_str.rs
src/mutator/: arm_guard.rs  binop_assign.rs  binop_bool.rs  binop_calc.rs  binop_cmp.rs  binop_eq.rs  extreme.rs  lit_bool.rs  lit_char.rs  lit_int.rs  lit_str.rs  loop_break.rs  unop_calc.rs
src/tests/: lit_int.rs  lit_str.rs  speculative.rs  test1.rs
src/transformer/: test_transformer.rs
tests/: lifetime_extensions.rs  lit-int.rs  lit-str.rs  regressions.rs  speculative.rs  test1.rs  weird-exprs.rs
