[package]
name = "muttest-core"
version = "0.1.0-alpha"
edition = "2021"
description = "effective mutation testing for Rust"
autoexamples = false

[dependencies]
once_cell = "1.17.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2.0", features = ["full", "fold", "visit"] }
csv = "1.2.2"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
muttest-codegen = { path = "codegen", features = ["selftest"] }
backtrace-on-stack-overflow = "0.3.0"
futures = { version = "0.3.28", features = ["executor"] }
anyhow = "1.0.72"

[workspace]
members = [".", "codegen", "app", "examples", "api", "selftest"]
