[package]
name = "muttest-codegen"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0.9"
lazy_static = "1.4.0"
muttest-core = { path = ".." }

[lib]
proc_macro = true
path = "lib.rs"

[features]
default = []
selftest = []