[package]
name = "muttest-selftest"
version = "0.1.0"
edition = "2021"

[lib]
path = "../src/lib.rs"

[dependencies]
muttest = { path = "../api" }
muttest-codegen = { path = "../codegen" }
lazy_static = "1.4.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
csv = "1.1"
backtrace-on-stack-overflow = "0.2.0"
log = "0.4.0"
env_logger = "0.9.0"

[features]
default = ["selftest"]
selftest = []